bug fixes in dark mode

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,47 +1,53 @@
 @media screen and (max-width: 4098px) {
-    html {
-        font-size:  187.8%;
-    }
+  html {
+    font-size: 187.8%;
   }
+}
+
 @media screen and (max-width: 3000px) {
-    html {
-        font-size:  125%;
-    }
+  html {
+    font-size: 125%;
   }
-  @media screen and (max-width: 2050px) {
-    html {
-      font-size:  93.7%;
-    }
+}
+
+@media screen and (max-width: 2050px) {
+  html {
+    font-size: 93.7%;
   }
-  @media screen and (max-width: 1920px) {
-    html {
-      font-size:  90.7%;
-    }
+}
+
+@media screen and (max-width: 1920px) {
+  html {
+    font-size: 87.3%;
   }
-  @media screen and (max-width: 1825px) {
-    html {
-      font-size: 83.6%;
-    }
+}
+
+@media screen and (max-width: 1825px) {
+  html {
+    font-size: 83.6%;
   }
-   
-  @media screen and (max-width: 1750px) {
-    html {
-      font-size: 69.6%;
-    }
+}
+
+@media screen and (max-width: 1750px) {
+  html {
+    font-size: 69.6%;
   }
-   
-  @media screen and (max-width: 1710px) {
-    html {
-      font-size: 78%;
-    }
+}
+
+@media screen and (max-width: 1710px) {
+  html {
+    font-size: 70%;
   }
-  @media screen and (max-width: 1370px) {
+}
+
+@media screen and (max-width: 1370px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  @media screen and (max-width: 1242px) {
     html {
-        font-size: 62.5%;
+      font-size: 57.5%;
     }
-    @media screen and (max-width: 1242px) {
-        html {
-            font-size: 56.9%;
-        }
   }
 }
